<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup android:id="@+id/activity_group_radioGroup"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#d2d2d2"
	    android:layout_gravity="bottom"
	    android:orientation="horizontal">
		<RadioButton android:text="@string/tab02_text01" android:checked="true" android:id="@+id/tab02_btn01" android:layout_marginTop="0.0dip" android:drawableTop="@drawable/bottom_monitor" style="@style/main_tab_bottom"/>
	    <RadioButton android:text="@string/tab02_text02" android:id="@+id/tab02_btn02" android:layout_marginTop="0.0dip" android:drawableTop="@drawable/bottom_control" style="@style/main_tab_bottom"/>
        <RadioButton android:text="@string/tab02_text03" android:id="@+id/tab02_btn03" android:layout_marginTop="0.0dip" android:drawableTop="@drawable/bottom_farmer" style="@style/main_tab_bottom"/>
        <RadioButton android:text="@string/tab02_text04" android:id="@+id/tab02_btn04" android:layout_marginTop="0.0dip" android:drawableTop="@drawable/bottom4" style="@style/main_tab_bottom"/>
	</RadioGroup>
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#00000000"
        android:layout_alignParentBottom="true">
         <!-- 显示提醒信息的button android:layout_weight=1  是3个butto，平分手机界面的宽度-->
       <Button 
           android:visibility="invisible"
           android:layout_height="fill_parent"
           android:layout_width="0dp"
           android:layout_weight="1" 
           android:background="#00000000"/> 
           <!-- 占位置的button，以便适应不同分辨率手机 -->
       <Button 
          	android:id="@+id/bt"
	        android:visibility="invisible"
	        android:layout_height="fill_parent"
	        android:layout_width="0dp"
	        android:layout_weight="1"/> 
       <!-- 占位置的button，以便适应不同分辨率手机 -->
       <Button 
	        android:visibility="invisible"
	        android:layout_height="fill_parent"
	        android:layout_width="0dp"
	        android:layout_weight="1"/> 
        <Button 
	        android:visibility="invisible"
	        android:layout_height="fill_parent"
	        android:layout_width="0dp"
	        android:layout_weight="1"/> 
     </LinearLayout>
</LinearLayout>