<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:id="@+id/t1"
        android:layout_width="280dp"
        android:layout_height="127dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/login_b"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/userName"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/login_u" />

            <EditText
                android:id="@+id/etUserName"
                style="?android:attr/textViewStyle"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/username_hint"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:textSize="15sp"
                android:text="admin"
                android:textColor="#9f9f9f" >
				
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/txt_right_icon"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:visibility="visible"
                android:background="@drawable/login_sj" />

            <ImageView
                android:id="@+id/img_error_or_right_user"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/error_or_right"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/l1"
            android:layout_marginTop="10dp"
            android:background="#CCCCCC" />
        <!-- 加背景 -->

        <LinearLayout
            android:id="@+id/fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pwd"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/login_p" />

            <EditText
                android:id="@+id/etPWD"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/pwd_hint"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:password="true"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="SNWLW12579"
                android:textColor="#9f9f9f" />

            <ImageView
                android:id="@+id/img_error_or_right_psw"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:src="@drawable/error_or_right"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/t1"
        android:layout_below="@+id/t1"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login" />

    <TextView
        android:id="@+id/Company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerInParent="true"
        android:paddingBottom="20px"
        android:paddingTop="110px"
        android:textSize="11sp"
        android:text="廊坊市大华夏神农信息技术有限公司"
        android:textColor="#0d6fb8" />

    <TextView
        android:id="@+id/txt_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t1"
        android:layout_below="@+id/t1"

        android:textColor="#FF3366"
        android:visibility="visible" />

    <Button
        android:id="@+id/login_settings_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:onClick="setBtnClick"
        android:background="@drawable/login_setting" />

</RelativeLayout>